# cochrane-modern-re

./: .gitignore  .sentinel.yml  CHANGELOG.md  CITATION.cff  Dockerfile  E156-PROTOCOL.md  README.md  install_r_deps.R  pyproject.toml
.github/workflows/: ci.yml  validate.yml
analysis/: 01_run_methods.py  02_classify_flips.py  03_aggregate.py  04_build_dashboard.py
data/: README.md  mid_lookup.yaml
docs/: RELEASE_PLAYBOOK.md  index.html  non_reproducible_index.html
docs/superpowers/plans/: 2026-04-21-cochrane-modern-re.md
docs/superpowers/specs/: 2026-04-21-cochrane-modern-re-design.md
paper/: manuscript.md  references.bib
paper/tables/: agg_REML_HKSJ_PI__tier1_sig_flip.md  agg_REML_HKSJ_PI__tier2_direction_flip.md  agg_REML_HKSJ_PI__tier3_mid_flip.md
paper/tables/non_reproducible/: agg_REML_HKSJ_PI__tier1_sig_flip.md  agg_REML_HKSJ_PI__tier2_direction_flip.md  agg_REML_HKSJ_PI__tier3_mid_flip.md
scripts/: generate_expected.R  prereq_check.py  validation_reference.R
src/: aggregator.py  dashboard.py  flip_classifier.py  loaders.py  ma_types.py  methods.py  outcome_mapper.py  paths_local.example.py  validation.py
src/r_scripts/: run_bayesmeta.R  run_metafor.R
src/templates/: dashboard.html.j2
tests/: conftest.py  test_aggregator.py  test_bayesmeta_mc.py  test_contracts.py  test_dashboard.py  test_flip_classifier.py  test_integration.py  test_loaders.py  test_methods.py  test_outcome_mapper.py  test_preflight.py  test_regression.py
tests/fixtures/: expected_metafor.json  integration_smoke_snapshot.json
tests/snapshots/: flip_rates_v0.1.0.json
