[project]
name = "cochrane-modern-re"
version = "0.1.0-dev"
description = "Modern RE methods vs RevMan defaults across 7,545 Cochrane pairwise MAs"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyarrow>=14",
    "pandas>=2.1",
    "numpy>=1.26",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
    "click>=8.1",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
